--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
+@font-face {
+  font-family: 'Open Sans Condensed';
+  src: local('Open Sans Condensed'), url(./fonts/OpenSansCondensed-Light.ttf) format('truetype');
+}
+
 body {
   padding: 20px 80px;
+  font-family: 'Open Sans Condensed';
 }
 a {
   text-decoration: none;
   color: black;
+}
+* {
+  box-sizing: border-box;
 }
